Signed-off-by: IanPalomo <palomoian068@gmail.com>

--- a/startbootstrap-sb-admin-2-gh-pages/pages/buttons.html
+++ b/startbootstrap-sb-admin-2-gh-pages/pages/buttons.html
@@ -283,7 +283,7 @@
                             <a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> Gráficos<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
-                                    <a href="flot.html">Graficos grandes</a>
+                                    <a href="flot.html">Graficos de Flot</a>
                                 </li>
                                 <li>
                                     <a href="morris.html">Gráfico de Morris.js</a>
@@ -301,7 +301,7 @@
                             <a href="#"><i class="fa fa-wrench fa-fw"></i> Elementos de Interface de Usuário<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
-                                    <a href="panels-wells.html">Painéis de Controle</a>
+                                    <a href="panels-wells.html">Painéis e Wells</a>
                                 </li>
                                 <li>
                                     <a href="buttons.html">Botões</a>
@@ -316,7 +316,7 @@
                                     <a href="icons.html"> Ícones</a>
                                 </li>
                                 <li>
-                                    <a href="grid.html">Rede</a>
+                                    <a href="grid.html">Grid</a>
                                 </li>
                             </ul>
                             <!-- /.nav-second-level -->
@@ -398,7 +398,7 @@
                                 <button type="button" class="btn btn-link">Link</button>
                             </p>
                             <br>
-                            <h4>Disabled Buttons</h4>
+                            <h4>Botões desabilitados</h4>
                             <p>
                                 <button type="button" class="btn btn-default disabled">Default</button>
                                 <button type="button" class="btn btn-primary disabled">Primary</button>
@@ -409,12 +409,12 @@
                                 <button type="button" class="btn btn-link disabled">Link</button>
                             </p>
                             <br>
-                            <h4>Button Sizes</h4>
+                            <h4>Tamanhos dos Botões</h4>
                             <p>
-                                <button type="button" class="btn btn-primary btn-lg">Large button</button>
-                                <button type="button" class="btn btn-primary">Default button</button>
-                                <button type="button" class="btn btn-primary btn-sm">Small button</button>
-                                <button type="button" class="btn btn-primary btn-xs">Mini button</button>
+                                <button type="button" class="btn btn-primary btn-lg">Botão Grande</button>
+                                <button type="button" class="btn btn-primary">Botão Padrão</button>
+                                <button type="button" class="btn btn-primary btn-sm">Botão Pequeno</button>
+                                <button type="button" class="btn btn-primary btn-xs">Mini Botão</button>
                                 <br>
                                 <br>
                                 <button type="button" class="btn btn-primary btn-lg btn-block">Botão de bloqueio de nível</button>
